# Ion

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  Ion.toml  LICENSE  README.md  SKILL.md  build.rs  index.html  install.sh  justfile  prek.toml  release-plz.toml  sitemap.xml  skills-lock.json
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  depoly.yml  docs.yml  grcov.yml  main.yml  release-plz.yml  release.yml  semver.yml
_astro/: _slug_.BA1Hg2HK.css  _slug_.DRsg4nKa.css  _slug_.D_MhjYPK.css  _slug_.DunOFYOP.css  _slug_.swV9h19a.css  index.D2sHCmgW.css  index.DDAhaMCk.css
assets/js/: 0e384e19.0f2b43b6.js  0e384e19.34af0f8d.js  0e384e19.f74b0289.js  1590c889.0fd842cb.js  1df93b7f.e7de5013.js  393be207.1a0474d1.js  4796e397.32aacb32.js  4796e397.9ad05d7d.js  4796e397.b72080ed.js  4a01809d.2864d984.js  4a01809d.b70c61c2.js  4e324c2f.6946ac4e.js  50436d32.5173a3a1.js  50436d32.6efd2036.js  50436d32.c958e48f.js  504864d4.143727d5.js  504864d4.ddf45d25.js  504864d4.ec90ef86.js  8e256448.633fdac7.js  935f2afb.30a9583f.js  935f2afb.748d17e1.js  935f2afb.b14a2071.js  97582893.1b06f3f2.js  97582893.5865bd46.js  b025b8ae.35010504.js  b025b8ae.451b5963.js  b025b8ae.5c4eb9b6.js  b621628e.0f9759d4.js  b621628e.3d10d50f.js  b621628e.fa82559f.js  c235b22f.00b539e6.js  c235b22f.0b37bfb3.js  c235b22f.883db000.js  c31da1f8.f6cdf672.js  c4de80f8.3807b502.js  c4de80f8.4c1bd135.js  c4de80f8.51ccbcdd.js  d9fb4dd4.ad08b9fd.js  main.1b21f51d.js  main.36115f64.js  (+3 more)
crates/autotune/: Cargo.toml
crates/autotune-agent/: Cargo.toml
crates/ion-cli/: Cargo.toml
crates/ion-skill/: CHANGELOG.md  Cargo.toml
crates/ion-skill/src/: agents.rs  agents_md.rs  autotune_plan.rs  binary.rs  config.rs  error.rs  git.rs  gitignore.rs  installer.rs  lib.rs  lockfile.rs  manifest.rs  manifest_writer.rs  migrate.rs  registry.rs  search.rs  self_update.rs  skill.rs  source.rs  templates.rs  tool_permission.rs  workspace.rs
crates/ion-skill/src/search/: agent.rs  cache.rs  github.rs  mod.rs  registry.rs  skills_sh.rs
crates/ion-skill/src/templates/: generic.md  julia.md  python.md  rust-python.md  rust.md  typescript.md
crates/ion-skill/src/update/: binary.rs  git.rs  mod.rs
crates/ion-skill/src/validate/: codeblock.rs  discovery.rs  markdown.rs  mod.rs  security.rs  structure.rs
crates/ionem/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/ionem-shell/: Cargo.toml
crates/ionem/src/: build.rs  error.rs  lib.rs  release.rs  self_update.rs
crates/ionem/src/shell/: cargo.rs  gh.rs  git.rs  mod.rs
crates/ionlib/: Cargo.toml
crates/scenario/: CHANGELOG.md  Cargo.toml
crates/scenario/src/: error.rs  key.rs  lib.rs  manifest.rs  output.rs  project.rs  scenario.rs  screen.rs  session.rs
crates/scenario/tests/: expect_not.rs  integration.rs  project.rs  send_key.rs  session_flow.rs  visible_screen.rs
crates/scenario/tests/fixtures/basic/: greeting.txt  template.toml
crates/scenario/tests/fixtures/with-manifest/: template.toml
crates/scenario/tests/fixtures/with-mappings/: config.txt  skill.md  template.toml
crates/scenario/tests/fixtures/with-optional/: config.txt  lockfile.txt  template.toml
crates/scenario/tests/fixtures/with-optional/extra/: data.txt
crates/scenario/tests/fixtures/with-symlinks/: template.toml
crates/scenario/tests/fixtures/with-symlinks/skills/: readme.md
depoly/: ion-init.sh
docs/: astro.config.mjs  binary-skills-guide.md  index.html  package-lock.json  package.json  tsconfig.json
docs/install/: index.html
docs/intro/: index.html
docs/plans/: 2026-03-01-codebase-simplification-design.md  2026-03-01-codebase-simplification-plan.md  2026-03-01-config-command-design.md  2026-03-01-config-command-plan.md  2026-03-01-global-config-design.md  2026-03-01-global-config-plan.md  2026-03-01-ion-implementation-plan.md  2026-03-01-ion-skill-manager-design.md  2026-03-01-search-command-design.md  2026-03-01-search-command-plan.md  2026-03-01-search-tui-design.md  2026-03-01-search-tui-plan.md  2026-03-01-symlink-installation-design.md  2026-03-01-symlink-installation-plan.md  2026-03-02-init-command-design.md  2026-03-02-init-command-plan.md  2026-03-02-ion-init-target-discoverability-design.md  2026-03-02-ion-init-target-discoverability-plan.md  2026-03-02-new-command-design.md  2026-03-02-new-command-plan.md  2026-03-02-skill-validation-design.md  2026-03-02-skill-validation-expansion-design.md  2026-03-02-skill-validation-expansion-plan.md  2026-03-02-skill-validation-plan.md  2026-03-02-symlink-gitignore-design.md  2026-03-02-symlink-gitignore-plan.md  2026-03-04-binary-cli-skills-design.md  2026-03-04-binary-cli-skills-phase2-plan.md  2026-03-04-binary-cli-skills-plan.md  2026-03-06-ion-self-design.md  (+17 more)
ion_derive/: Cargo.toml
julia-semver/: Cargo.toml  README.md
julia-semver/src/: bound.rs  lib.rs  range.rs  spec.rs  version.rs
julia-semver/src/spec/: bound.rs  mod.rs  range.rs  version.rs
markdown-page/: index.html
pagefind/: pagefind-entry.json  pagefind.en_16e0337adc.pf_meta  pagefind.en_350b585e41.pf_meta  pagefind.en_67f05f8464.pf_meta  pagefind.en_8ebd3de6d6.pf_meta  pagefind.en_9df9d47ea0.pf_meta  pagefind.en_acaf51dabb.pf_meta  pagefind.en_b79ce49cbf.pf_meta  pagefind.en_bc48e9d2c9.pf_meta  pagefind.en_c35a8f8015.pf_meta  pagefind.en_eda8cafd67.pf_meta  pagefind.en_fdb190f3aa.pf_meta
skills/: README.md
src/: builtin_skill.rs  context.rs  dirs.rs  errors.rs  json.rs  julia.rs  lib.rs  main.rs  style.rs
templates/: ion-cli.md.j2
tests/: agents_integration.rs  binary_integration.rs  ci_integration.rs  completion_integration.rs  config_integration.rs  fixture_tests.rs  init_agents_integration.rs  init_integration.rs  integration.rs  json_integration.rs  migrate_integration.rs  new_integration.rs  scenario_tests.rs  search_integration.rs  skill_md_generation.rs  test_bin.rs  test_utils.rs  update_integration.rs  validate_integration.rs  workspace_integration.rs
website/: astro.config.mjs  docusaurus.config.js  package-lock.json  package.json  pnpm-lock.yaml
xtask/: Cargo.toml
(+457 files in other folders)
