[package]
name = "ion"
version = "0.6.5"
edition = "2024"

[dependencies]
ionem = { workspace = true, features = ["git", "gh", "cargo", "self-update"] }
anyhow = "1"
clap = { version = "4.6.0", features = ["string", "derive"] }
clap_complete = "4"
crossterm = "0.29"
dirs.workspace = true
env_logger = "0.11"
ion-skill = { path = "crates/ion-skill" }
log.workspace = true
pathdiff.workspace = true
ratatui = "0.30"
similar = "3"
indicatif = "0.18"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
toml_edit.workspace = true

[dev-dependencies]
scenario = { path = "crates/scenario" }
serde_json.workspace = true
tempfile.workspace = true

[build-dependencies]
ionem = { workspace = true, default-features = false }
minijinja = "2"
serde_json.workspace = true

[workspace]
members = [".", "crates/ion-skill", "crates/ionem", "crates/scenario"]
# Run cargo commands (test, clippy, build) across every member by default so the
# documented `cargo nextest run` / `cargo clippy` pre-commit checks — and CI —
# cover the whole workspace, not just the root `ion` package.
default-members = [".", "crates/ion-skill", "crates/ionem", "crates/scenario"]

[workspace.dependencies]
ionem = { path = "crates/ionem", default-features = false }
dirs = "6"
flate2 = "1"
log = "0.4"
pathdiff = "0.2"
reqwest = { version = "0.13.2", features = ["blocking", "json", "query", "rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
tar = "0.4"
tempfile = "3"
thiserror = "2"
toml = "1.0"
toml_edit = "0.25"
