[package]
name = "julia-semver"
version = "0.1.0"
edition = "2021"
authors = ["Roger Luo <rogerluo.rl18@gmail.com>"]
description = "a clone of Julia's SemVer implementation in Rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
regex = "1.7.1"
