[package]
name = "ion-skill"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"
pathdiff = "0.2"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
