[package]
name = "ion-skill"
version = "0.1.0"
edition = "2024"

[dependencies]
ionem = { workspace = true, features = ["runtime"] }
dirs.workspace = true
flate2.workspace = true
log.workspace = true
pathdiff.workspace = true
pulldown-cmark = "0.13"
regex = "1"
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
walkdir = "2"

[dev-dependencies]
