[package]
name = "ionem"
version = "0.1.3"
edition = "2024"
description = "Library for building Ion binary skills with standard self-management commands"
license = "MIT"
repository = "https://github.com/Roger-luo/Ion"
readme = "README.md"

[features]
default = ["runtime"]
runtime = ["dep:reqwest", "dep:flate2", "dep:tar", "dep:tempfile", "dep:serde", "dep:serde_json"]

[dependencies]
flate2 = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
