[package]
name = "scenario"
version = "0.1.1"
edition = "2024"
description = "Define and test CLI behavior scenarios — input/output, interactive sessions, and terminal conditions (TTY, dimensions, color)"
license = "MIT"
repository = "https://github.com/Roger-luo/scenario"
keywords = ["cli", "testing", "tty", "pty", "snapshot"]
categories = ["development-tools::testing"]

[dependencies]
portable-pty = "0.9"
regex = "1"
strip-ansi-escapes = "0.2"
thiserror = "2"
insta = { version = "1", features = ["filters"], optional = true }
insta-cmd = { version = "0.6", optional = true }
minijinja = "2"
tempfile = "3"
toml = "1"
serde = { version = "1", features = ["derive"] }
globset = "0.4"

[features]
default = []
snapshot = ["dep:insta", "dep:insta-cmd"]

[dev-dependencies]
